--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,12 @@ edition = "2021"
 actix-cors = "0.6.4"
 actix-files = "0.6.6"
 actix-identity = "0.6.0"
+actix-jwt-auth-middleware = "0.5.0"
 actix-multipart = "0.6.1"
 actix-rt = "2.10.0"
 actix-session = { version = "0.8", features = ["cookie-session"] }
 actix-web = { version = "4", features = ["cookies", "rustls-0_23" ] }
+apistos = { version = "0.6.0", features = ["query", "actix-web-grants", "chrono", "extras", "garde", "lab_query", "multipart", "qs_query", "rapidoc", "redoc", "rust_decimal", "scalar", "swagger-ui", "url", "uuid"] }
 argon2 = "0.5.2"
 async-trait = "0.1.74"
 bson = { version = "2.9.0", features = ["serde_with"] }
